--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /DontSleep/obj/Debug
+/DontSleep/bin/Debug/DontSleep.pdb
+/DontSleep/bin/Debug/DontSleep.exe.config
+/DontSleep/icons8-カーソル-128.ico
